<resources>
    <string name="app_name">Project2Option1</string>
    <string name="item1">Item 1</string>
    <string name="headers">Headers</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="insert_password">Insert Password</string>
    <string name="insert_username">Insert Username</string>
    <string name="sign_in">Sign In</string>
    <string name="register_new_account">Register New Account</string>
    <string name="sms_notifications">SMS notifications</string>
    <string name="get_messages_whenever_stock_is_empty">Get messages whenever stock is empty</string>
    <string name="item2">Item 2</string>
    <string name="quantity2">Quantity 2\n</string>
    <string name="quantity1">Quantity 1</string>
    <string name="delete2">Delete 2 row</string>
    <string name="addRow">Add a new item</string>
    <string name="SMS">SMS</string>
    <string name="BackToGrid">Back to Grid</string>
</resources>