<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"

        />
    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="80dp"
        android:layout_marginStart="16dp"

        >
        <TableRow
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="100dp"

            style="@style/CardView.Dark"
            android:layout_marginStart="0dp"

            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:text="@string/headers"
                android:textStyle="bold"
                android:padding="8dp"/>
            <TextView
                android:text="@string/headers"
                android:textStyle="bold"
                android:padding="8dp"/>
            <TextView
                android:text="@string/headers"
                android:textStyle="bold"
                android:padding="8dp"/>
            <TextView
                android:text="@string/headers"
                android:textStyle="bold"
                android:padding="8dp"/>
        </TableRow>
        <TableRow
            android:id="@+id/items"
            android:layout_width="match_parent"
            android:layout_height="100dp"

            style="@style/CardView.Dark">
            <TextView
                android:text="@string/item1"
                android:textStyle="bold"
                android:padding="8dp"/>
            <TextView
                android:text="@string/quantity1"
                android:textStyle="bold"
                android:padding="8dp"/>
            <Button
                android:id="@+id/Delete"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/Add"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />
        </TableRow>

        <TableRow
            android:id="@+id/items2"
            style="@style/CardView.Dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/item2">
            <TextView
                android:text="@string/item2"
                android:textStyle="bold"
                android:padding="8dp"/>
            <TextView
                android:text="@string/quantity2"
                android:textStyle="bold"
                android:padding="8dp"/>

            <Button
                android:id="@+id/Delete2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <Button
                android:id="@+id/Add2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/AddRow"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addRow"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="24dp"/>
    <Button
        android:id="@+id/SMS"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SMS"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="24dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



