<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"


    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="24dp"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="24dp"

        />

    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:autofillHints="Permission"
        android:ems="10"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/get_messages_whenever_stock_is_empty" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sms"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="240dp"
        android:text="@string/sms_notifications" />
    <Button
        android:id="@+id/BackToGrid"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BackToGrid"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="24dp"/>

</RelativeLayout>