<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"

    android:paddingTop="0dp"
    android:paddingBottom="20dp"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"

        />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="60dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="24dp"

        android:autofillHints="prompt_email"
        android:hint="@string/insert_username"
        android:inputType="text"
        android:selectAllOnFocus="true"

        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="68dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="60dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="24dp"

        android:autofillHints="prompt_password"
        android:hint="@string/insert_password"
        android:imeActionLabel="action_sign_in_short"

        android:inputType="textPassword"
        android:selectAllOnFocus="true"

         />

    <Button
        android:id="@+id/login"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="190dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="24dp"
        android:enabled="false"
        android:text="@string/sign_in"

         />

    <Button
        android:id="@+id/register"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="190dp"
        android:layout_height="82dp"

        android:layout_marginStart="220dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"

        android:enabled="false"
        android:text="@string/register_new_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias="0.251" />


</RelativeLayout>